Updates from Overleaf

--- a/NuMuCCsel/NuMuCCsel.tex
+++ b/NuMuCCsel/NuMuCCsel.tex
@@ -48,6 +48,10 @@
 \subsection{Inclusive Selection}
 \label{ssec:NuMUCCsel:INC}
 
+\subsection{$\nu_{\mu}$ Constraint \textcolor{red}{Ryan}}
+
+\par 
+
 \subsubsection{Signal Definition}
 \label{sssec:NuMUCCsel:INC:signaldef}
 \par A $\nu_{\mu}$ event is identified by, at least, one muon candidate originating from inside the fiducial volume of the detector. Additional tracks and showers may accompany the muon candidate; these assist in reconstruction but are not necessary in the inclusive selection. In the event selection detailed below, only one track per slice must satisfy the criterion in order to be included in this selection.
