--- a/main.tex
+++ b/main.tex
@@ -108,7 +108,6 @@ This analysis focuses on being able to measure low-energy $\nu_e$ interactions. 
 \begin{table}[ht]
 \caption{\label{tab:selectionsNue} Schematic of the three $\nu_e$ selections, outlining the definition and goals of each. In this work, the threshold for a visible proton at truth-level proton is 40 MeV of KE. N refers to one or more and X to any number of final state particles of a given category.}
 \centering
-%\begin{tabular}{*{3}{ m{0.1\textwidth} }}
 \begin{tabular}{ m{0.1\textwidth} | m{0.2\textwidth}  m{0.45\textwidth}  }
 Channel & Description & Goal \\
 \hline
@@ -574,7 +573,13 @@ Figure~\ref{fig:eres:neutrino} shows the comparison between reconstructed energy
 
 \subsection{Variable definitions \textcolor{red}{Elena}}
 \label{sec:nueselection:variables}
-\par Variables used for the $\nu_e$ selections aim to isolate features in the neutrino interaction that are specific to events with final-state electrons. These features are split in several categories which leverage calorimetric and topological information that characterizes $\nu_e$ interactions. This section will describe the variables used in the $\nu_e$ selections. Table [\textcolor{red}{TABLE}] summarizes all variables used, with a brief description. Variables that warrant a longer introduction are described below.
+\par Variables used for the $\nu_e$ selections aim to isolate features in the neutrino interaction that are specific to events with final-state electrons. These features are split in several categories which leverage calorimetric and topological information that characterizes $\nu_e$ interactions. This section will describe the variables used in the $\nu_e$ selections. Table ~\ref{tab:variableSummary} summarizes all variables used, with a brief description. Variables that warrant a longer introduction are described below.
+
+
+
+
+
+
 
 \begin{figure}[H]
 \begin{center}
@@ -591,6 +596,8 @@ Figure~\ref{fig:eres:neutrino} shows the comparison between reconstructed energy
     \item \textbf{Moliere ``angle''} (variable: \emph{shrmoliereavg}, figure~\ref{fig:nue:variables:dedx}) This quantity aims to characterize the profile of reconstructed EM showers. It is computed using 3D spacepoints. For each 3D spacepoint, the angle between the shower's direction and the spacepoint is calculated. The average of all such angles is used as the variable.
     \item \textbf{dE/dx variables} (variable: \emph{shr\_tkfit\_gap10\_dedx\_\{U,V,Y\}} and \emph{shr\_tkfit\_2cm\_dedx\_\{U,V,Y\}} )  These variables, computed using calorimetric information from each plane. The two different variables are calculated as the median d$E$/d$x$ computed over some segment of a shower's trunk. The two segments used are the first two centimeters, and the range [1,5] cm. The choice to leverage both these variables  is motivated by: (a) Sometimes - especially for the 1$e$0$p$ channel - the first few hits of a shower merge activity from short protons, causing a large d$E$/d$x$ which hampes the ability to identify the event as an electron. (b) For photon showers, especially at low energy, d$E$/d$x$ becomes more and more MIP-like as one moves further along the shower (see figure~\ref{fig:dedxgammas:dist}).
 \end{itemize}{}
+
+
 
 \begin{figure}[H] 
 \begin{center}
@@ -621,6 +628,29 @@ Figure~\ref{fig:eres:neutrino} shows the comparison between reconstructed energy
     \item \emph{anglediff\_Y}: 2D angle difference in the collection plane between the 2nd shower and the 1st shower cluster  (cluster direction defined as charge-weighted direction of cluster w.r.t. vertex)
     \item \emph{secondshower\_Y\_vtxdist}: 2D distance from vertex for the largest 2D cluster associated to the  recovered 2nd shower in the collection plane
 \end{itemize}{}
+
+
+
+
+\begin{table}[ht]
+\caption{\label{tab:variableSummary} Summary of the definition for the variables used in the analysis.}
+\centering
+\begin{tabular}{ m{0.2\textwidth} | m{0.6\textwidth}  }
+Variable Name & Description \\
+\hline
+ \emph{secondshower\_Y\_nhit} & number of hits in the collection plane of the largest cluster associated to the  recovered 2nd shower\\
+ \hline
+\emph{secondshower\_Y\_dot} &  dot product between the vector connecting the vertex to the closest hit in cluster and the charge-weighted cluster direction w.r.t. closest hit in cluster\\
+\hline
+\emph{anglediff\_Y} & 2D angle difference in the collection plane between the 2nd shower and the 1st shower cluster  (cluster direction defined as charge-weighted direction of cluster w.r.t. vertex)\\
+\hline
+\emph{secondshower\_Y\_vtxdist} & 2D distance from vertex for the largest 2D cluster associated to the  recovered 2nd shower in the collection plane\\
+\hline
+\end{tabular}
+\label{tab:gt}
+\end{table}
+
+
 
 \begin{figure}[H] 
 \begin{center}
