Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -648,6 +648,7 @@ Figure~\ref{fig:eres:neutrino} shows the comparison between reconstructed energy
 
 \subsection{Variable definitions \textcolor{green}{Elena}}
 \label{sec:nueselection:variables}
+\input{SelectionNueVar-Ch5}
 \clearpage
 \subsection{$\nu_e$ CC Inclusive selection \textcolor{red}{Wouter}}
 \input{NueCCsel/NueCCsel}
